--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
